Avanço no portfolio

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Luiz Eduardo</h1>
-        <nav id="menu">
-            <a href="#projects">Projetos</a>
-            <a href="#profissional">Profissional</a>
-            <a href="#educational">Formação</a>
-        </nav>
+        <div class="header">
+            <h1>Luiz Eduardo</h1>
+            <nav id="menu">
+                <a href="#projects">Projetos</a>
+                <a href="#profissional">Profissional</a>
+                <a href="#educational">Formação</a>
+            </nav>
+        </div>
     </header>
     <main>
         <section id="first">
@@ -26,7 +28,28 @@
             </aside>
         </section>
         <section id="projects">
-
+            <h1>Projetos</h1>
+            <div class="abandono">
+                <article class="summary">
+                    <h2>Abandono de carrinho</h2>
+                    <p>Projeto realizado para o site de compra de atividades para o Hurb, uma das maiores agencias de viagem online do Brasil. Este projeto apresento um pouco sobre meu processo de trabalho e como solucionamos o problema de abandono de carrinho e uma melhoria de conversão de quase 65%.</p>
+                    <a href="pages/abandono.html" target="_blank">Confiera o case completo</a>
+                </article>
+                <aside>
+                    <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                </aside>
+            </div>
+            <hr class="divider">
+            <div class="simulador">
+                <article class="summary">
+                    <h2>Abandono de carrinho</h2>
+                    <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
+                    <a href="pages/abandono.html" target="_blank">Confiera o case completo</a>
+                </article>
+                <aside>
+                    <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                </aside>
+            </div>
         </section>
         <section id="profissional">
 
