--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luiz's Portfolio</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/mobile.css">
 </head>
 <body>
     <header>
@@ -29,30 +30,117 @@
         </section>
         <section id="projects">
             <h1>Projetos</h1>
-            <div class="abandono">
-                <article class="summary">
-                    <h2>Abandono de carrinho</h2>
-                    <p>Projeto realizado para o site de compra de atividades para o Hurb, uma das maiores agencias de viagem online do Brasil. Este projeto apresento um pouco sobre meu processo de trabalho e como solucionamos o problema de abandono de carrinho e uma melhoria de conversão de quase 65%.</p>
-                    <a href="pages/abandono.html" target="_blank">Confiera o case completo</a>
-                </article>
-                <aside>
-                    <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
-                </aside>
-            </div>
-            <hr class="divider">
-            <div class="simulador">
-                <article class="summary">
-                    <h2>Abandono de carrinho</h2>
-                    <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
-                    <a href="pages/abandono.html" target="_blank">Confiera o case completo</a>
-                </article>
-                <aside>
-                    <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
-                </aside>
+            <p>Confira alguns projetos que mostram um pouco sobre minha metodologia de trabalho.</p>
+            <div id="carrossel">
+                <div class="case">
+                    <article>
+                        <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                        <h2>Abandono de carrinho</h2>
+                        <p>Projeto realizado para o site de compra de atividades para o Hurb, uma das maiores agencias de viagem online do Brasil. Este projeto apresento um pouco sobre meu processo de trabalho e como solucionamos o problema de abandono de carrinho e uma melhoria de conversão de quase 65%.</p>
+                        <a href="pages/abandono.html" target="_blank">Confiera o case completo</a>
+                    </article>
+                </div>
+                <div class="case">
+                    <article>
+                        <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                        <h2>Abandono de carrinho</h2>
+                        <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
+                        <a href="pages/abandono.html" target="_blank">Confiera o case completo</a>
+                    </article>
+                </div>
+                <div class="case">
+                    <article>
+                        <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                        <h2>Plataforma de eventos online</h2>
+                        <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
+                        <a href="pages/abandono.html" target="_blank">Confiera o case completo</a>
+                    </article>
+                </div>
             </div>
         </section>
         <section id="profissional">
-
+            <h1>Trajetória profissional</h1>
+            <p>Confira alguns projetos que mostram um pouco sobre minha metodologia de trabalho.</p>
+            <table>
+                <thead>
+                    <th>Empresa</th>
+                    <th>Período</th>
+                    <th>Cargo</th>
+                    <th>Função</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Vetta</td>
+                        <td>de <em>05/2024</em> <br> até <em>01/2025</em></td>
+                        <td>Product Designer Sênior</td>
+                        <td>
+                            <ul>
+                                <li><span>Desenvolvi novas funcionalidades para sistemas de simulações voltados à eficiência energética;</span></li>
+                                <li><span>Atuei na inovação de processos siderúrgicos, assegurando maior eficiência operacional;</span></li>
+                                <li><span>Realizei aplicação prática de designs conceituais para necessidades específicas do setor;</span></li>
+                                <li><span>Contribuí para redução de custos operacionais através de soluções tecnológicas inteligentes;</span></li>
+                                <li><span>Assegurei a qualidade e usabilidade de sistemas complexos por meio de iterações contínuas.</span></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Ahgora <br>by TOTVS</td>
+                        <td>de 08/2023 <br> até 05/2024</td>
+                        <td>Product Designer Sênior</td>
+                        <td>
+                            <ul>
+                                <li><span>Melhorei fluxos e interfaces em sistemas de tratativas de pontos e faltas;</span></li>
+                                <li><span>Realizei análise de dados usando ferramentas como Metabase e Clarity para usabilidade;</span></li>
+                                <li><span>Otimizei processos de abonos e justificativas, aumentando eficiência e experiência do usuário;</span></li>
+                                <li><span>Projetei soluções que facilitaram a gestão de rotinas de RH;</span></li>
+                                <li><span>Atuei na identificação e resolução de problemas com base em insights analíticos.</span></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Hurb</td>
+                        <td>de 11/2021 <br> até 05/2023</td>
+                        <td>Product Designer Pleno</td>
+                        <td>
+                            <ul>
+                                <li><span>Desenvolvi fluxos e interfaces para produtos na área de atividades turísticas;</span></li>
+                                <li><span>Realizei análise de usabilidade e identificação de pontos de abandono de compra;</span></li>
+                                <li><span>Liderei a otimização de experiências de compra para usuários finais;</span></li>
+                                <li><span>Colaborei com squads multidisciplinares para melhorar a acessibilidade do produto;</span></li>
+                                <li><span>Implementei melhorias contínuas baseadas em feedbacks de usuários e dados coletados.</span></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Delivery Much</td>
+                        <td>de 11/2020 <br> até 11/2021</td>
+                        <td>Product Designer Pleno</td>
+                        <td>
+                            <ul>
+                                <li><span>Desenhei fluxos e jornadas de usuário para migração de sistemas de cadastro de lojas;</span></li>
+                                <li><span>Conduzi testes de usabilidade para validar novas funcionalidades em ambiente ágil;</span></li>
+                                <li><span>Realizei alinhamentos estratégicos e definições de regras de negócios em discovery;</span></li>
+                                <li><span>Priorizei oportunidades com base em dados e feedbacks do mercado;</span></li>
+                                <li><span>Desenvolvi soluções que aprimoraram a experiência de lojistas na plataforma.</span></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Catarinas Design</td>
+                        <td>de 04/2019 <br> até 11/2020</td>
+                        <td>UX/UI Designer</td>
+                        <td>
+                            <ul>
+                                <li><span>Conduzi projetos completos desde a pesquisa até a entrega final de protótipos;</span></li>
+                                <li><span>Realizei entrevistas e análises de dados para suporte à criação de soluções inovadoras;</span></li>
+                                <li><span>Liderei alinhamentos estratégicos entre stakeholders e equipes de desenvolvimento;</span></li>
+                                <li><span>Desenvolvi protótipos de alta fidelidade e documentação detalhada para handoff;</span></li>
+                                <li><span>Entreguei soluções baseadas em dados para necessidades específicas dos usuários.</span></li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <section id="educational">
 
