--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="projects">
             <h1>Projetos</h1>
             <p>Confira alguns projetos que mostram um pouco sobre minha metodologia de trabalho.</p>
-            <div id="carrossel">
+            <div id="container">
                 <div class="case">
                     <article>
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
@@ -71,7 +71,7 @@
                 <tbody>
                     <tr>
                         <td>Vetta</td>
-                        <td>de <em>05/2024</em> <br> até <em>01/2025</em></td>
+                        <td class="period">de <em>05/2024</em> <br> até <em>01/2025</em></td>
                         <td>Product Designer Sênior</td>
                         <td>
                             <ul>
@@ -85,7 +85,7 @@
                     </tr>
                     <tr>
                         <td>Ahgora <br>by TOTVS</td>
-                        <td>de 08/2023 <br> até 05/2024</td>
+                        <td class="period">de <em>08/2023</em> <br> até <em>05/2024</em></td>
                         <td>Product Designer Sênior</td>
                         <td>
                             <ul>
@@ -99,7 +99,7 @@
                     </tr>
                     <tr>
                         <td>Hurb</td>
-                        <td>de 11/2021 <br> até 05/2023</td>
+                        <td class="period">de <em>11/2021</em> <br> até <em>05/2023</em></td>
                         <td>Product Designer Pleno</td>
                         <td>
                             <ul>
@@ -113,7 +113,7 @@
                     </tr>
                     <tr>
                         <td>Delivery Much</td>
-                        <td>de 11/2020 <br> até 11/2021</td>
+                        <td class="period">de <em>11/2020</em> <br> até <em>11/2021</em></td>
                         <td>Product Designer Pleno</td>
                         <td>
                             <ul>
@@ -127,7 +127,7 @@
                     </tr>
                     <tr>
                         <td>Catarinas Design</td>
-                        <td>de 04/2019 <br> até 11/2020</td>
+                        <td class="period">de <em>04/2019</em> <br> até <em>11/2020</em></td>
                         <td>UX/UI Designer</td>
                         <td>
                             <ul>
