--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>Confira alguns projetos que mostram um pouco sobre minha metodologia de trabalho.</p>
             <div id="container">
                 <div class="case">
-                    <article>
+                    <article class="abandono">
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Abandono de carrinho</h2>
                         <p>Projeto realizado para o site de compra de atividades para o Hurb, uma das maiores agencias de viagem online do Brasil. Este projeto apresento um pouco sobre meu processo de trabalho e como solucionamos o problema de abandono de carrinho e uma melhoria de conversão de quase 65%.</p>
@@ -41,7 +41,7 @@
                     </article>
                 </div>
                 <div class="case">
-                    <article>
+                    <article class="simulador">
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Abandono de carrinho</h2>
                         <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
@@ -49,7 +49,7 @@
                     </article>
                 </div>
                 <div class="case">
-                    <article>
+                    <article class="evento">
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Plataforma de eventos online</h2>
                         <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
