Melhorias de layout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <section id="first">
                 <article id="action">
                     <h1>Desde 2019 impactando <br> <em>pessoas, produtos e negócios</em></h1>
-                    <p>Confira toda minha trajetória profissional.</p>
+                    <!-- <p>Confira toda minha trajetória profissional.</p> -->
+                    <a href="docs/CV - Luiz Eduardo Luckner Costa.pdf" download class="btn-download">Download CV</a>
+                    <a href="#projects" class="btn-projects">Ver projetos CV</a>
                 <!-- </article>
                 <aside id="image">
                     <img src="image/me.jpg" alt="minha foto"> Colocar a extensão do arquivo
