--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </header>
     <main>
         <!--HERO-->
-        <section id="hero" aria-label="Sorbe mim">
+        <section id="hero" aria-label="Destaque">
                 <article id="hero-content">
                     <h1>Desde 2019 impactando <br> <em>pessoas, produtos e negócios</em></h1>
                     <a href="docs/CV - Luiz Eduardo Luckner Costa.pdf" download class="btn-download">Download CV</a>
-                    <a href="#projects" class="btn-projects">Ver projetos CV</a>
+                    <a href="#projects" class="btn-projects">Ver projetos</a>
                 </article>
         </section>
         <!--PROJETOS-->
@@ -48,7 +48,7 @@
                 <div class="case">
                     <article class="simulador">
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
-                        <h2>Abandono de carrinho</h2>
+                        <h2>Simulador de compra</h2>
                         <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
                         <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confiera o case completo</a>
                     </article>
@@ -153,7 +153,7 @@
             </article>
         </section>
         <!--ESPECIALIDADES-->
-        <section id="quarto" aria-label="Minhas especialidades">
+        <!-- <section id="quarto" aria-label="Minhas especialidades">
             <article id="expertize">
                 <h1>Especialidades</h1>
                 <div class="badge">Research</div>
@@ -162,22 +162,52 @@
                 <div class="badge">Analise de dados</div>
                 <div class="badge">Product strategy</div>
             </article>
+        </section> -->
+        <!--SOBRE MIM-->
+        <section id="quinto" aria-label="Sobre mim">
+            <div class="sobre">
+                <div class="about-content">
+                    <article id="about">
+                        <h1>Sobre mim</h1>
+                        <p>Possuo sólida experiência em design de produto, atuando em empresas de tecnologia de diversos setores, com foco na criação de soluções inovadoras e centradas no usuário. Desenvolvo fluxos, protótipos e interfaces com ênfase em usabilidade, eficiência e acessibilidade. Tenho forte habilidade em liderar projetos, conduzindo pesquisas, análises de dados e validações de hipóteses para otimização contínua de sistemas complexos. Possuo experiência em ferramentas analíticas e metodologias ágeis, garantindo a entrega de produtos que atendem às demandas dos clientes e do mercado. Busco constantemente atualizações e especializações, trazendo contribuições significativas para o sucesso das equipes e empresas em que atuo.</p>
+                    </article>
+                    <article id="skill">
+                        <h1>Especialidades</h1>
+                        <div class="badge-skill">
+                            <div class="badge">Research</div>
+                            <div class="badge">Testes de usabilidade</div>
+                            <div class="badge">Prototipação</div>
+                            <div class="badge">Analise de dados</div>
+                            <div class="badge">Product strategy</div>
+                        </div>
+                    </article>
+                </div>
+                <aside class="me">
+                    <img src="image/me.jpg" alt="Foto minha">
+                </aside>
+                <div class="bola"></div>
+            </div>
         </section>
+        <!--FOOTER-->
         <footer>
             <div class="footer-content">
                 <p>&copy; 2025 Luiz Eduardo. Todos os direitos reservados.</p>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/seu-usuario" target="_blank" rel="noopener noreferrer">
-                        <img src="linkedin-icon.svg" alt="LinkedIn">
+                    <a href="https://www.linkedin.com/in/luizluckner/" class="icon" target="_blank" rel="noopener noreferrer">
+                        <img src="image/linkedin-icon.png" alt="LinkedIn">
                     </a>
-                    <a href="https://github.com/seu-usuario" target="_blank" rel="noopener noreferrer">
-                        <img src="github-icon.svg" alt="GitHub">
+                    <a href="https://github.com/luizluckner" class="icon" target="_blank" rel="noopener noreferrer">
+                        <img src="image/github-icon.png" alt="GitHub">
+                    </a>
+                    <a href="mailto:luiz.luckner@gmail.com" class="icon" target="_blank" rel="noopener noreferrer">
+                        <img src="image/email-icon.png" alt="Email">
+                    </a>
+                    <a href="https://wa.me/5548999221465?text=Oi%20Luiz,%20acabei%20de%20visualizar%20seu%20portfólio%20e%20gostaria%20de%20conversar." class="icon" target="_blank" rel="noopener noreferrer">
+                        <img src="image/whatsapp-icon.png" alt="WhatsApp">
                     </a>
                 </div>
-                <p>Contato: <a href="mailto:seuemail@example.com">seuemail@example.com</a></p>
             </div>
         </footer>
-        
     </main>
 </body>
 </html>
