--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <header>
         <div class="header">
             <div class="space"></div> <!--Espaço para centralizar o nome no header-->
-            <h1>Luiz Eduardo</h1>
+            <a href="#hero">
+                <h1>Luiz Eduardo</h1>
+            </a>
             <nav id="menu">
                 <ul>
                     <li><a href="#projects">Projetos</a></li>
                     <li><a href="#profissional">Profissional</a></li>
-                    <li><a href="#expertize">Formação</a></li>
+                    <li><a href="#about">Sobre</a></li>
                 </ul>
             </nav>
         </div>
