--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="header">
-            <div class="space"></div> <!--Espaço para centralizar o nome no header-->
+            <!-- <div class="space"></div> Espaço para centralizar o nome no header -->
             <a href="#hero">
                 <h1>Luiz Eduardo</h1>
             </a>
