Arrumei nome do arquivo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="hero" aria-label="Destaque">
                 <article id="hero-content">
                     <h1>Desde 2019 impactando <br> <em>pessoas, produtos e negócios</em></h1>
-                    <a href="docs/CV - Luiz Eduardo Luckner Costa.pdf" download class="btn-download">Download CV</a>
+                    <a href="docs/CV-LuizEduardoLucknerCosta.pdf" download class="btn-download">Download CV</a>
                     <a href="#projects" class="btn-projects">Ver projetos</a>
                 </article>
         </section>
