--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav id="menu">
                 <ul>
                     <li><a href="#projects">Projetos</a></li>
-                    <li><a href="#profissional">Profissional</a></li>
+                    <li><a href="#terceiro">Profissional</a></li>
                     <li><a href="#about">Sobre</a></li>
                 </ul>
             </nav>
