Criação do case do hurb

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Abandono de carrinho</h2>
                         <p>Projeto realizado para o site de compra de atividades para o Hurb, uma das maiores agencias de viagem online do Brasil. Este projeto apresento um pouco sobre meu processo de trabalho e como solucionamos o problema de abandono de carrinho e uma melhoria de conversão de quase 65%.</p>
-                        <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confiera o case completo</a>
+                        <a href="abandono.html" target="_blank" rel="noopener noreferrer">Confiera o case completo</a>
                     </article>
                 </div>
                 <div class="case">
@@ -171,7 +171,7 @@
                 <div class="about-content">
                     <article id="about">
                         <h1>Sobre mim</h1>
-                        <p>Possuo sólida experiência em design de produto, atuando em empresas de tecnologia de diversos setores, com foco na criação de soluções inovadoras e centradas no usuário. Desenvolvo fluxos, protótipos e interfaces com ênfase em usabilidade, eficiência e acessibilidade. Tenho forte habilidade em liderar projetos, conduzindo pesquisas, análises de dados e validações de hipóteses para otimização contínua de sistemas complexos. Possuo experiência em ferramentas analíticas e metodologias ágeis, garantindo a entrega de produtos que atendem às demandas dos clientes e do mercado. Busco constantemente atualizações e especializações, trazendo contribuições significativas para o sucesso das equipes e empresas em que atuo.</p>
+                        <p>Possuo sólida experiência em design de produto, atuando em empresas de tecnologia de diversos setores, com foco na criação de soluções inovadoras e centradas no usuário. Desenvolvo fluxos, protótipos e interfaces com ênfase em usabilidade, eficiência e acessibilidade. <br>Tenho forte habilidade em liderar projetos, conduzindo pesquisas, análises de dados e validações de hipóteses para otimização contínua de sistemas complexos. Possuo experiência em ferramentas analíticas e metodologias ágeis, garantindo a entrega de produtos que atendem às demandas dos clientes e do mercado. Busco constantemente atualizações e especializações, trazendo contribuições significativas para o sucesso das equipes e empresas em que atuo.</p>
                     </article>
                     <article id="skill">
                         <h1>Especialidades</h1>
