Finalização case hurb

--- a/abandono.html
+++ b/abandono.html
@@ -24,9 +24,9 @@
         </div>
     </header>
     <section id="hero">
-        <picture id="hero-img">
-            <img src="image/capa-abandono.png" alt="">
-        </picture>
+        <div id="hero-img">
+            <!-- <img src="image/capa-abandono.png" alt=""> -->
+        </div>
         <article id="case">
             <h1>Abandono de carrinho</h1>
             <h2><em>Resumo</em></h2>
@@ -78,7 +78,7 @@
             </p>
 
             <h2><em>Ideação</em></h2>
-            <h3><strong><em>deias, rabiscos e cocriação</em></strong></h3>
+            <h3><strong><em>Ideias, rabiscos e cocriação</em></strong></h3>
             <p>
                 Já com muitos dados compilados e analisados, segui para etapa de levantamento de ideias. 
             </p>
@@ -136,8 +136,21 @@
         <article class="mais-case">
             <h1>Gostou deste case?</h1>
             <p>Acredito que também vai gostar de ver estes outros cases.</p>
-            <div id="card-case">
-            
+            <div id="container">
+                <div class="case">
+                    <article class="simulador">
+                        <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                        <h2>Simulador de compra</h2>
+                        <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                    </article>
+                </div>
+                <div class="case">
+                    <article class="evento">
+                        <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
+                        <h2>Plataforma de eventos online</h2>
+                        <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                    </article>
+                </div>
             </div>
         </article>
     </section>
