--- a/abandono.html
+++ b/abandono.html
@@ -6,13 +6,15 @@
     <title>Abandono de carrinho</title>
     <link rel="stylesheet" href="style/abandono.css">
     <meta name="description" content="Projeto de solução para abono de carrinho de compra de ingressos da maior agência de viagens online do Brasil.">
+    <link rel="shortcut icon" href="/image/logo.svg" type="image/x-icon">
 </head>
 <body>
     <header>
         <div class="header">
             <!-- <div class="space"></div> Espaço para centralizar o nome no header -->
             <a href="index.html">
-                <h1>Luiz Eduardo</h1>
+                <!-- <h1>Luiz Eduardo</h1> -->
+                <img src="image/logo.svg" alt="" style="height: 40px;">
             </a>
             <nav id="menu">
                 <ul>
