--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="style/style.css">
     <meta name="description" content="Portfólio de Luiz Eduardo, Product Designer com experiência em UX/UI e otimização de processos digitais. Veja meus projetos e trajetória profissional.">
+    <link rel="shortcut icon" href="/image/logo.svg" type="image/x-icon">
 
 </head>
 <body>
@@ -14,7 +15,8 @@
         <div class="header">
             <!-- <div class="space"></div> Espaço para centralizar o nome no header -->
             <a href="#hero">
-                <h1>Luiz Eduardo</h1>
+                <!-- <h1>Luiz Eduardo</h1> -->
+                <img src="image/logo.svg" alt="" style="height: 40px;">
             </a>
             <nav id="menu">
                 <ul>
