--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Abandono de carrinho</h2>
                         <p>Projeto realizado para o site de compra de atividades para o Hurb, uma das maiores agencias de viagem online do Brasil. Este projeto apresento um pouco sobre meu processo de trabalho e como solucionamos o problema de abandono de carrinho e uma melhoria de conversão de quase 65%.</p>
-                        <a href="abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                        <a href="abandono.html" rel="noopener noreferrer">Confira o case completo</a>
                     </article>
                 </div>
                 <div class="case">
@@ -54,7 +54,7 @@
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Simulador de compra</h2>
                         <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
-                        <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                        <a href="pages/abandono.html">Confira o case completo</a>
                     </article>
                 </div>
                 <div class="case">
@@ -62,7 +62,7 @@
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Plataforma de eventos online</h2>
                         <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
-                        <a href="pages/abandono.html" target="_blank" rel="noopener noreferrer">Confira o case completo</a>
+                        <a href="pages/abandono.html">Confira o case completo</a>
                     </article>
                 </div>
             </div>
