Criação case ambev

--- a/abandono.html
+++ b/abandono.html
@@ -6,7 +6,7 @@
     <title>Abandono de carrinho</title>
     <link rel="stylesheet" href="style/abandono.css">
     <meta name="description" content="Projeto de solução para abono de carrinho de compra de ingressos da maior agência de viagens online do Brasil.">
-    <link rel="shortcut icon" href="/image/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="image/logo.svg" type="image/x-icon">
 </head>
 <body>
     <header>
