--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <img src="image/capa-abandono.png" alt="Capa do case abandono de carrinho">
                         <h2>Simulador de compra</h2>
                         <p>Este case mostra como adaptamos métodos de teste de usabilidade ao ambiente remoto durante a pandemia, para melhorar um sistema interno da AmBev voltado à simulação e compra de insumos. O processo incluiu uma Design Sprint, e um Focus Group remoto, onde clientes testaram o e deram feedback em tempo real.</p>
-                        <a href="pages/abandono.html">Confira o case completo</a>
+                        <a href="simulador.html">Confira o case completo</a>
                     </article>
                 </div>
                 <div class="case">
